feat(tailwind):  add colors and typography

--- a/web/src/ui/styles/main.css
+++ b/web/src/ui/styles/main.css
@@ -1,2 +1,6 @@
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 /* Base */
 @import url('./base/utilities.css');
+@import url('./base/layout.css');
