feat(hooks):  add useTransitionTimeout

--- a/web/src/ui/styles/main.css
+++ b/web/src/ui/styles/main.css
@@ -4,3 +4,6 @@
 /* Base */
 @import url('./base/utilities.css');
 @import url('./base/layout.css');
+
+/* Animations */
+@import url('./animations/slide-animation.css');
